es模块和post无法上传图像的bug修复